# argus

./: .env.example  .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  SECURITY.md  WEB.md  argus_dashboard.jsx  nohup.out  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
ansible/playbooks/: backup-config.yml  health-check.yml  reconcile-firewall.yml
argus-dashboard/: index.html  package-lock.json  package.json  vite.config.js
argus-dashboard/src/: App.jsx  api.js
crates/argus-api/: Cargo.toml
crates/argus-api/src/: auth.rs  db_audit_store.rs  db_connection_store.rs  db_rule_store.rs  main.rs  middleware.rs  rule_store.rs  websocket.rs
crates/argus-api/src/routes/: alerting.rs  anomaly.rs  audit.rs  auth_routes.rs  backup.rs  block.rs  bulk_rules.rs  cluster.rs  compliance.rs  connection_draining.rs  connections.rs  dpi.rs  health.rs  import_export.rs  metrics.rs  mod.rs  orchestrator.rs  qos.rs  reputation.rs  rule_stats.rs  rules.rs  scheduler.rs  simulator.rs  stats.rs  syslog.rs  tenants.rs  vpn_portal.rs  ztna.rs
crates/argus-cli/: Cargo.toml
crates/argus-cli/src/: main.rs  tui.rs
crates/argus-common/: Cargo.toml
crates/argus-common/src/: audit.rs  error.rs  lib.rs  net.rs  types.rs
crates/argus-core/: Cargo.toml
crates/argus-core/src/: alerting.rs  anomaly.rs  audit_log.rs  backup.rs  cluster.rs  compliance.rs  connection_draining.rs  connection_tracker.rs  dpi.rs  ebpf.rs  gitops.rs  health_check.rs  import_export.rs  lib.rs  multi_wan.rs  qos.rs  rate_limiter.rs  reputation.rs  rule_engine.rs  rule_stats.rs  scanner.rs  scheduler.rs  simulator.rs  syslog.rs  tenancy.rs  threat_intel.rs  vpn_portal.rs  wasm_plugin.rs  ztna.rs
crates/argus-ebpf/: Cargo.toml
crates/argus-ebpf/src/: lib.rs  maps.rs  pure.rs  xdp.rs
crates/argus-observability/: Cargo.toml
crates/argus-observability/src/: lib.rs  logging.rs  metrics.rs  tracing_setup.rs
crates/argus-orchestrator/: Cargo.toml
crates/argus-orchestrator/src/: ansible.rs  drift.rs  lib.rs  netbox.rs  vyos.rs
deploy/docker/: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  grafana-dashboard-provider.yml  prometheus.yml
deploy/grafana/: argus-dashboard.json
deploy/systemd/: argus-api.service  argus-health-check.service  argus-health-check.timer
docs/: NEW_FEATURES.md  api-spec.yaml  architecture.md  codebase-guide.md  deployment.md  development.md  presentation-narasi.md  threat-model.md
docs/runbooks/: README.md
frontend/: index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  api.js  app.css  main.jsx  styles.js
frontend/src/components/: Badge.jsx  Shared.jsx  ThreatVisualizer.jsx
frontend/src/lib/stores/: auth.js  live.js  theme.js
frontend/src/pages/: Alerts.jsx  Audit.jsx  Connections.jsx  Dashboard.jsx  Login.jsx  Reputation.jsx  Rules.jsx  Settings.jsx
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/alerts/: +page.svelte
frontend/src/routes/audit/: +page.svelte
frontend/src/routes/connections/: +page.svelte
frontend/src/routes/dashboard/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/rules/: +page.svelte
scripts/: bootstrap.sh  install-router.sh  uninstall.sh
