[package]
name = "argus-cli"
version.workspace = true
edition.workspace = true

[dependencies]
argus-common = { path = "../argus-common" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
anyhow.workspace = true
uuid.workspace = true
ratatui.workspace = true
crossterm = "0.28"
futures.workspace = true
