[package]
name = "argus-common"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2 = "0.10"
hex = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
