[package]
name = "argus-core"
version.workspace = true
edition.workspace = true

[dependencies]
argus-common = { path = "../argus-common" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
sha2 = "0.10"
hex = "0.4"
serde_yaml = "0.9"
csv = "1.3"
ipnetwork.workspace = true
wasmtime = { version = "28", optional = true }
wasmparser = { version = "0.218", optional = true }
dashmap = "6"
sqlx = { workspace = true }
x25519-dalek = { version = "2", features = ["static_secrets"] }
base64.workspace = true
rand = "0.8"

aya = "0.12"

[features]
default = []
wasm = ["wasmtime", "wasmparser"]

[dev-dependencies]
wat = "1"
