[package]
name = "argus-orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
argus-common = { path = "../argus-common" }
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
futures.workspace = true
